<resources>
    <string name="app_name">Quiz-Android</string>
    <string name="Gender">Gender</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="Hint">Name</string>
    <string name="Question1">Which Company Developed Android?</string>
    <string name="Question2">WebBrowser available in Android is based on</string>
    <string name="Question3">Android is based on which Language</string>
    <string name="Question4">For creating User Interface in  Android,we need to use</string>
    <string name="Question5">ABD stands for</string>
    <string name="Question6">ANR stands for</string>
    <string name="Question7">Android is based on which Kernel</string>
    <string name="Question8">What is Eclipse?</string>
    <string name="Question1_a">Apple</string>
    <string name="Question1_b">Google</string>
    <string name="Question1_c">Android.Inc</string>
    <string name="Question1_d">Nokia</string>
    <string name="Question2_a">Chrome</string>
    <string name="Question2_b">Opera</string>
    <string name="Question2_c">Open Source Webkit</string>
    <string name="Question2_d">Safari</string>
    <string name="Question3_a">C++</string>
    <string name="Question3_b">Java</string>
    <string name="Question3_c">Python</string>
    <string name="Question3_d">C</string>
    <string name="Question4_a">C and C++</string>
    <string name="Question4_b">Java and XML</string>
    <string name="Question4_c">.Net and HTML</string>
    <string name="Question4_d">PL/SQL</string>
    <string name="Question5_a">Application Debug Bridge</string>
    <string name="Question5_b">Application Development Bridge </string>
    <string name="Question5_c">Android Debug Bridge</string>
    <string name="Question5_d">Android Debug Bridge</string>
    <string name="Question6_a">Application not Recognised</string>
    <string name="Question6_b">Android not Recognised</string>
    <string name="Question6_c">Application not Responding</string>
    <string name="Question6_d">Application not Read</string>
    <string name="Question7_a">Windows Kernel</string>
    <string name="Question7_b">Mac Kernel</string>
    <string name="Question7_c">Linux Kernel</string>
    <string name="Question7_d">Hybrid Kernel</string>
    <string name="Question8_a">Android Tool</string>
    <string name="Question8_b">IDE</string>
    <string name="Question8_c">Android Interface</string>
    <string name="Question8_d">Android Software</string>
    <string name="Submit">Submit</string>
    <string name="Summary">SUMMARY</string>
    <string name="Score">Score</string>
    <string name="Review">Are you happy with the App?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
</resources>
